fixed alignment issue

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,5 +1,5 @@
 .home__container{
-
+    
     row-gap: 7rem;
 }
 
@@ -10,6 +10,7 @@
     padding-top: 5.5rem;
     column-gap: 2rem;
     align-items: center;
+    justify-content: space-between;
 }
 
 
